--- a/speedialPhoenix/export_presets.cfg
+++ b/speedialPhoenix/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../Speedial-Phoenix/SpeedialPhoenix.exe"
+export_path="../SpeedialPhoenix.exe"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
